ghc-4335c07/testsuite/tests/backpack/should_fail/bkpfail39.bkp
unit p where
    signature A where
        class C a
    module B where
        import A
        instance C Int where
